--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,5 @@
-asttokens==3.0.0
-comm==0.2.2
-decorator==5.1.1
-exceptiongroup==1.2.2
-executing==2.1.0
-ipython==8.18.1
-ipywidgets==8.1.5
-jedi==0.19.2
-jupyterlab-widgets==3.0.13
-matplotlib-inline==0.1.7
-numpy==2.0.2
-packaging==24.2
-parso==0.8.4
-pexpect==4.9.0
+dash==2.18.2
+numpy==2.2.0
+pandas==2.2.3
 plotly==5.24.1
-prompt-toolkit==3.0.48
-ptyprocess==0.7.0
-pure-eval==0.2.3
-pygments==2.18.0
-stack-data==0.6.3
-tenacity==9.0.0
-traitlets==5.14.3
-typing-extensions==4.12.2
-urllib3==1.26.20
-wcwidth==0.2.13
-widgetsnbextension==4.0.13
-gunicorn
+umap_learn==0.5.7
