--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,125 @@
+aiofiles==22.1.0
+aiosqlite==0.20.0
+anyio==4.6.2.post1
+appnope==0.1.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==3.0.0
+attrs==24.2.0
+babel==2.16.0
+beautifulsoup4==4.12.3
+bleach==6.2.0
+blinker==1.9.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+comm==0.2.2
 dash==2.18.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+debugpy==1.8.9
+decorator==5.1.1
+defusedxml==0.7.1
+entrypoints==0.4
+exceptiongroup==1.2.2
+executing==2.1.0
+fastjsonschema==2.21.1
+flask==3.0.3
+fqdn==1.5.1
+idna==3.10
+importlib-metadata==8.5.0
+ipykernel==6.29.5
+ipython==8.18.1
+ipython-genutils==0.2.0
+isoduration==20.11.0
+itsdangerous==2.2.0
+jedi==0.19.2
+jinja2==3.1.4
+joblib==1.4.2
+json5==0.10.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-client==7.4.9
+jupyter-core==5.7.2
+jupyter-events==0.10.0
+jupyter-server==2.14.2
+jupyter-server-fileid==0.9.3
+jupyter-server-terminals==0.5.3
+jupyter-server-ydoc==0.8.0
+jupyter-ydoc==0.2.5
+jupyterlab==3.6.6
+jupyterlab-pygments==0.3.0
+jupyterlab-server==2.27.3
+llvmlite==0.43.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mistune==3.0.2
+nbclassic==1.1.0
+nbclient==0.10.1
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+notebook==6.5.7
+notebook-shim==0.2.4
+numba==0.60.0
 numpy==2.0.2
+overrides==7.7.0
+packaging==24.2
 pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.3.6
 plotly==5.24.1
-umap_learn==0.5.7
-gunicorn
+prometheus-client==0.21.1
+prompt-toolkit==3.0.48
+psutil==6.1.0
+ptyprocess==0.7.0
+pure-eval==0.2.3
+pycparser==2.22
+pygments==2.18.0
+pynndescent==0.5.13
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+pytz==2024.2
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+requests==2.32.3
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.22.3
+scikit-learn==1.6.0
+scipy==1.13.1
+Send2Trash==1.8.3
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
+stack-data==0.6.3
+tenacity==9.0.0
+terminado==0.18.1
+threadpoolctl==3.5.0
+tinycss2==1.4.0
+tomli==2.2.1
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20241003
+typing-extensions==4.12.2
+tzdata==2024.2
+umap-learn==0.5.7
+uri-template==1.3.0
+urllib3==2.2.3
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+werkzeug==3.0.6
+y-py==0.6.2
+ypy-websocket==0.8.4
+zipp==3.21.0
